# Portals

./: Cargo.toml  red_and_green_portals.scene
crates/app/: Cargo.toml
crates/app/src/: camera.rs  main.rs  plane.rs  ray.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs  rotor.rs  transform.rs  vector3.rs
crates/ray_tracing/: Cargo.toml  build.rs
crates/ray_tracing/shaders/: full_screen_quad.slang  ray_tracing.slang
crates/ray_tracing/shaders/include/: plane.slang  random.slang  ray.slang  rotor.slang  transform.slang
crates/ray_tracing/src/: color.rs  lib.rs
