[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { workspace = true }
egui-file-dialog = "0.11.0"
wgpu = { workspace = true }
math = { workspace = true }
ray_tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.141"

[lints]
workspace = true
